Add blocks to home page

--- a/index.html
+++ b/index.html
@@ -27,13 +27,88 @@
         </header>
 
         <div class="main-wrapper">
-            <section class="top-banner-block">
-            </section>
-            <div class="top-block-title">
+            <div class="top-banner">
+                <div class="top-banner-block"></div>
+                <div class="top-block-title">
                     <p id="title-big">Excel Models </br> Built by Investors, for Investors</p>
-                    <h2 id="title-description">Save time and win more deals with our products and consulting services.</>
+                    <h2 id="title-description">Save time and win more deals with our products and consulting services.</h2>
+                </div>
             </div>
+            <div class="slider-block">
+                <div id="title">Testimonials</div> 
+                <div id="slider-text">"Absolutely loved. I found it to be very lucidly explained, which helped me revise the basic modelling skills at a great pace. The drawings and quotes were the cherry on top!"
+                    <div id="slider-author">Esha Puri, Associate, Deutsche Bank</div>  
+                </div>
+            </div>
+            
+            <div class="models">
+                <div id="title">Models</div> 
+                <div class="models-block">
+                    <div class="model-card">
+                        <img class="card-image" src="/img/model-1.png">
+                        <div class="subtitle">Standard Acquisition Model</div>
+                        <div class="text">Multifamily Modeling’s basic apartment acquisition model for an existing building. Logical, straightforward, and easy to use, whether you’re new to underwriting or an experienced investor.</div>
+                        <a class="button" href="#">Learn more</a>
+                    </div>
+                    <div class="model-card">
+                            <img class="card-image" src="/img/model-2.png">
+                            <div class="subtitle">Standard Acquisition Model</div>
+                            <div class="text">Multifamily Modeling’s basic apartment acquisition model for an existing building. Logical, straightforward, and easy to use, whether you’re new to underwriting or an experienced investor.</div>
+                            <a class="button" href="#">Learn more</a>
+                    </div>
+                    <div class="model-card">
+                            <img class="card-image" src="/img/model-3.png">
+                            <div class="subtitle">Standard Acquisition Model</div>
+                            <div class="text">Multifamily Modeling’s basic apartment acquisition model for an existing building. Logical, straightforward, and easy to use, whether you’re new to underwriting or an experienced investor.</div>
+                            <a class="button" href="#">Learn more</a>
+                    </div>
+                    <div class="model-card">
+                            <img class="card-image" src="/img/model-4.png">
+                            <div class="subtitle">Standard Acquisition Model</div>
+                            <div class="text">Multifamily Modeling’s basic apartment acquisition model for an existing building. Logical, straightforward, and easy to use, whether you’re new to underwriting or an experienced investor.</div>
+                            <a class="button" href="#">Learn more</a>
+                    </div>
+                </div>
+            </div>
+
+            <div class="consulting">
+                <div id="title">Consulting</div> 
+                <div class="consulting-block">
+                    <div class="consult-card">
+                        <img class="consult-card-image" src="/img/consult-1.png">
+                        <div class="subtitle">Custom Models</div>
+                        <div class="text">Not all models look the same. Need something you don’t see here? We’ll build it for you.</div>
+                    </div>
+                    <div class="consult-card">
+                        <img class="consult-card-image" src="/img/consult-2.png">
+                        <div class="subtitle">Custom Models</div>
+                        <div class="text">Not all models look the same. Need something you don’t see here? We’ll build it for you.</div>
+                    </div>
+                    <div class="consult-card">
+                        <img class="consult-card-image" src="/img/consult-3.png">
+                        <div class="subtitle">Custom Models</div>
+                        <div class="text">Not all models look the same. Need something you don’t see here? We’ll build it for you.</div>
+                    </div>
+                </div>
+                <div class="line"></div>
+                <div class="additional-block">
+                        <div class="text" id="addtitional-text">At Multifamily Modeling, our aim is to provide our clients with high quality and meticulously honed consulting services to help them get to the right answer.</div> 
+                        <a class="button" href="#">Learn more</a>
+                </div>      
+            </div>
+
+            <div class="about">
+                <div class="what-we-do-banner"></div>
+                <div id="about-information">
+                    <div id="title"> What We Do</div>
+                    <div class="text" id="about-text">We create straightforward, sophisticated, and aesthetically-pleasing financial models designed for the multifamily investment and development community. Our firm also offers consulting services to multifamily investors and developers throughout the US. See our Consulting page to learn more. <br> <br> To us, building financial models is an exercise in problem solving, and we are glad to sweat the details so you don’t have to.</div>
+                    <a class="button" href="#">Learn more</a>
+                </div>
+            </div>
+
         </div>
+
+        
     </div>
 
 </body>
