--- a/index.html
+++ b/index.html
@@ -11,17 +11,17 @@
 
 <body> 
     <div class="page-wrapper">
-        <header class="menu">
-            <div id="logo">
-                <h2 id="logo-icon" href="index.html"></h2>
-                <span id="logo-name" >PROJECT NAME</span>
-            </div>
+        <header>
+            <a class="logo" href="index.html">
+                <p class="logo-icon" ></p>
+                <p class="logo-name" >PROJECT NAME</p>
+            </a>
             <nav>
                 <ul>
-                    <li><a href="#">MODELS</a></li>
-                    <li><a href="#">CONSULTING</a></li>
-                    <li><a href="#">ABOUT</a></li>
-                    <li><a href="#">BLOG</a></li>
+                    <li><a href="#" class="link">MODELS</a></li>
+                    <li><a href="#" class="link">CONSULTING</a></li>
+                    <li><a href="#" class="link">ABOUT</a></li>
+                    <li><a href="#" class="link">BLOG</a></li>
                     <li><img src="/img/cart-icon.svg" alt="Cart" class="icon" href="#"></li>
                 </ul>
             </nav>
@@ -29,101 +29,101 @@
 
         <div class="main-wrapper">
             <div class="top-banner">
-                <div class="top-banner-block"></div>
+                <div class="top-banner-bg"></div>
                 <div class="top-block-title">
-                    <p id="title-big">Excel Models </br> Built by Investors, for Investors</p>
-                    <h2 id="title-description">Save time and win more deals with our products and consulting services.</h2>
+                    <h1 class="title-big">Excel Models </br> Built by Investors, for Investors</h1>
+                    <p class="title-description">Save time and win more deals with our products and consulting services.</p>
                 </div>
             </div>
             <div class="slider-block">
-                <div id="title">Testimonials</div> 
-                <div id="slider-text">"Absolutely loved. I found it to be very lucidly explained, which helped me revise the basic modelling skills at a great pace. The drawings and quotes were the cherry on top!"
-                    <div id="slider-author">Esha Puri, Associate, Deutsche Bank</div>  
+                <h2 class="title">Testimonials</h2> 
+                <div class="slider-text">"Absolutely loved. I found it to be very lucidly explained, which helped me revise the basic modelling skills at a great pace. The drawings and quotes were the cherry on top!"
+                    <div class="slider-author">Esha Puri, Associate, Deutsche Bank</div>  
                 </div>
             </div>
             
             <div class="models">
-                <div id="title">Models</div> 
+                <h2 class="title">Models</h2> 
                 <div class="models-block">
                     <div class="model-card">
-                        <img class="card-image" src="/img/model-1.png">
+                        <img src="/img/model-1.png">
                         <div class="subtitle">Standard Acquisition Model</div>
-                        <div class="text">Multifamily Modeling’s basic apartment acquisition model for an existing building. Logical, straightforward, and easy to use, whether you’re new to underwriting or an experienced investor.</div>
+                        <p class="text">Multifamily Modeling’s basic apartment acquisition model for an existing building. Logical, straightforward, and easy to use, whether you’re new to underwriting or an experienced investor.</p>
                         <a class="button" href="#">Learn more</a>
                     </div>
                     <div class="model-card">
-                            <img class="card-image" src="/img/model-2.png">
+                            <img src="/img/model-2.png">
                             <div class="subtitle">Value-Add/Renovation Model</div>
-                            <div class="text">Multifamily Modeling’s basic apartment acquisition model for an existing building. Logical, straightforward, and easy to use, whether you’re new to underwriting or an experienced investor.</div>
+                            <p class="text">Multifamily Modeling’s basic apartment acquisition model for an existing building. Logical, straightforward, and easy to use, whether you’re new to underwriting or an experienced investor.</p>
                             <a class="button" href="#">Learn more</a>
                     </div>
                     <div class="model-card">
-                            <img class="card-image" src="/img/model-3.png">
+                            <img src="/img/model-3.png">
                             <div class="subtitle">Condo Development Model</div>
-                            <div class="text">For the ground-up development of a condominium building or complex. Featuring a robust development schedule, allowing users to easily run a number of construction timing scenarios.</div>
+                            <p class="text">For the ground-up development of a condominium building or complex. Featuring a robust development schedule, allowing users to easily run a number of construction timing scenarios.</p>
                             <a class="button" href="#">Learn more</a>
                     </div>
                     <div class="model-card">
-                            <img class="card-image" src="/img/model-4.png">
+                            <img src="/img/model-4.png">
                             <div class="subtitle">Apartment Development Model</div>
-                            <div class="text">Our flagship development product featuring everything from a Back-of-the-Envelope analysis (allowing developers to get to a quick Yield-on-Cost) to our sophisticated timing and construction schedules.</div>
+                            <p class="text">Our flagship development product featuring everything from a Back-of-the-Envelope analysis (allowing developers to get to a quick Yield-on-Cost) to our sophisticated timing and construction schedules.</p>
                             <a class="button" href="#">Learn more</a>
                     </div>
                 </div>
             </div>
 
             <div class="consulting">
-                <div id="title">Consulting</div> 
+                <div class="title">Consulting</div> 
                 <div class="consulting-block">
                     <div class="consult-card">
-                        <img class="consult-card-image" src="/img/consult-1.png">
+                        <img src="/img/consult-1.png">
                         <div class="subtitle">Custom Models</div>
-                        <div class="text">Not all models look the same. Need something you don’t see here? We’ll build it for you.</div>
+                        <p class="text">Not all models look the same. Need something you don’t see here? We’ll build it for you.</p>
                     </div>
                     <div class="consult-card">
-                        <img class="consult-card-image" src="/img/consult-2.png">
+                        <img src="/img/consult-2.png">
                         <div class="subtitle">Model Audits</div>
-                        <div class="text">Sometimes models just need a little love. We review spreadsheets on behalf of our clients in order to verify formulas and improve functionality.</div>
+                        <p class="text">Sometimes models just need a little love. We review spreadsheets on behalf of our clients in order to verify formulas and improve functionality.</p>
                     </div>
                     <div class="consult-card">
-                        <img class="consult-card-image" src="/img/consult-3.png">
+                        <img src="/img/consult-3.png">
                         <div class="subtitle">Acqusitions Analysis</div>
-                        <div class="text">Do you run lean without the capital to invest in a full-time Acquisition Analyst? Don’t worry, we’ve got you covered.</div>
+                        <p class="text">Do you run lean without the capital to invest in a full-time Acquisition Analyst? Don’t worry, we’ve got you covered.</p>
                     </div>
                 </div>
                 <div class="line"></div>
                 <div class="additional-block">
-                        <div class="text" id="addtitional-text">At Multifamily Modeling, our aim is to provide our clients with high quality and meticulously honed consulting services to help them get to the right answer.</div> 
+                        <p class="text addtitional-text">At Multifamily Modeling, our aim is to provide our clients with high quality and meticulously honed consulting services to help them get to the right answer.</p> 
                         <a class="button" href="#">Learn more</a>
                 </div>      
             </div>
 
             <div class="about">
                 <div class="about-banner"></div>
-                <div id="about-information">
-                    <div id="title"> What We Do</div>
-                    <div class="text" id="about-text">We create straightforward, sophisticated, and aesthetically-pleasing financial models designed for the multifamily investment and development community. Our firm also offers consulting services to multifamily investors and developers throughout the US. See our Consulting page to learn more. <br> <br> To us, building financial models is an exercise in problem solving, and we are glad to sweat the details so you don’t have to.</div>
+                <div class="about-information">
+                    <h2 class="title"> What We Do</h2>
+                    <p class="text about-text">We create straightforward, sophisticated, and aesthetically-pleasing financial models designed for the multifamily investment and development community. Our firm also offers consulting services to multifamily investors and developers throughout the US. See our Consulting page to learn more. <br> <br> To us, building financial models is an exercise in problem solving, and we are glad to sweat the details so you don’t have to.</p>
                     <a class="button" href="#">Learn more</a>
                 </div>
             </div>
 
             <div class="articles">
-                <div id="title">Articles</div>
+                <h2 class="title">Articles</h2>
                 <div class="articles-block">
                     <div class="article-card">
-                        <img class="article-card-image" src="/img/article-1.png">
+                        <img src="/img/article-1.png">
                         <div class="subtitle">Multifamily Ground-Up Development Model</div>
-                        <div class="text">The Development Models will appeal to developers both small and large. Meaning, a small 2-3 person shop to a private equity firm.</div>
+                        <p class="text">The Development Models will appeal to developers both small and large. Meaning, a small 2-3 person shop to a private equity firm.</p>
                     </div>
                     <div class="article-card">
-                        <img class="article-card-image" src="/img/article-2.png">
+                        <img src="/img/article-2.png">
                         <div class="subtitle">Multifamily Ground-Up Development Model</div>
-                        <div class="text">The Development Models will appeal to developers both small and large. Meaning, a small 2-3 person shop to a private equity firm.</div>
+                        <p class="text">The Development Models will appeal to developers both small and large. Meaning, a small 2-3 person shop to a private equity firm.</p>
                     </div>
                     <div class="article-card">
-                        <img class="article-card-image" src="/img/article-3.png">
+                        <img  src="/img/article-3.png">
                         <div class="subtitle">Multifamily Ground-Up Development Model</div>
-                        <div class="text">The Development Models will appeal to developers both small and large. Meaning, a small 2-3 person shop to a private equity firm.</div>
+                        <p class="text">The Development Models will appeal to developers both small and large. Meaning, a small 2-3 person shop to a private equity firm.</p>
                     </div>  
                     <div class="article-card">
                         <div class="next-button"></div>
@@ -133,21 +133,21 @@
         </div>
 
         <footer class="footer">
-            <div id="footer-logo">
-                <h2 id="footer-logo-icon" href="index.html"></h2>
-                <span id="footer-logo-name" >PROJECT NAME</span>
-            </div>
+            <a class="footer-logo" href="index.html">
+                <p class="footer-logo-icon"></p>
+                <p class="footer-logo-name" >PROJECT NAME</p>
+            </a>
             <nav>
-                    <ul>
-                        <li><a href="#">MODELS</a></li>
-                        <li><a href="#">CONSULTING</a></li>
-                        <li><a href="#">ABOUT</a></li>
-                        <li><a href="#">BLOG</a></li>
-                        <li><a href="#">LEGAL</a></li>
+                    <ul >
+                        <li><a href="#" class="link">MODELS</a></li>
+                        <li><a href="#" class="link">CONSULTING</a></li>
+                        <li><a href="#" class="link">ABOUT</a></li>
+                        <li><a href="#" class="link">BLOG</a></li>
+                        <li><a href="#" class="link">LEGAL</a></li>
                     </ul>
                     <ul>
-                        <li><img src="/img/place-icon.svg" alt="Cart" class="icon" href="#"><a href="#">P.O. Box XXXX, Fairfield, CT 06815</a></li>
-                        <li><img src="/img/phone-icon.svg" alt="Cart" class="icon" href="#"><a href="#">(203) xxx-5555</a></li>
+                        <li><img src="/img/place-icon.svg" alt="Cart" class="icon" href="#"><a class="link" href="#">P.O. Box XXXX, Fairfield, CT 06815</a></li>
+                        <li><img src="/img/phone-icon.svg" alt="Cart" class="icon" href="#"><a class="link" href="#">(203) xxx-5555</a></li>
                     </ul>
                 </nav>
         </footer>
