--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
                     <li><a href="#" class="link">MODELS</a></li>
                     <li><a href="#" class="link">CONSULTING</a></li>
                     <li><a href="#" class="link">ABOUT</a></li>
-                    <li><a href="#" class="link">BLOG</a></li>
+                    <li><a href="/blog.html" class="link">BLOG</a></li>
                     <li><img src="/img/cart-icon.svg" alt="Cart" class="icon" href="#"></li>
                 </ul>
             </nav>
