Add responsive design  to Blog

--- a/blog.html
+++ b/blog.html
@@ -1,94 +1,180 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta http-equiv="X-UA-Compatible" content="ie=edge">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta http-equiv="X-UA-Compatible" content="ie=edge" />
     <title>Home page</title>
-    <link rel='stylesheet' href='/style.css'>
-</head>
-<script type="text/javascript" src="/bundle.js"></script>
-
-<body class="blog"> 
+    <link rel="stylesheet" href="/style.css" />
+    <link
+      rel="stylesheet"
+      href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css"
+    />
+  </head>
+  <script type="text/javascript" src="/bundle.js"></script>
+  <body class="blog">
     <div class="page-wrapper">
-        <header class="white-header">
-            <a class="logo" href="index.html">
-                <p class="logo-icon" ></p>
-                <p class="logo-name" >PROJECT NAME</p>
+      <header class="white-header" id="header-js">
+        <div class="container">
+          <div class="header-content">
+            <span class="navbar-toggle" id="js-navbar-toggle">
+              <i class="fas fa-bars fa-2x"></i
+            ></span>
+            <a class="logo" href="index.html" id="logo">
+              <span class="logo-icon"></span>
+              project name
             </a>
-            <nav>
-                <ul>
-                    <li><a href="#" class="link">MODELS</a></li>
-                    <li><a href="#" class="link">CONSULTING</a></li>
-                    <li><a href="#" class="link">ABOUT</a></li>
-                    <li><a href="blog.html" class="link">BLOG</a></li>
-                    <li><img src="/img/cart-icon-black.svg" alt="Cart" class="icon" href="#"></li>
-                </ul>
+            <i class="fas fa-shopping-cart fa-2x"></i>
+            <nav id="js-menu">
+              <ul>
+                <li id="nav-li"><a href="#" class="link">MODELS</a></li>
+                <li id="nav-li"><a href="#" class="link">CONSULTING</a></li>
+                <li id="nav-li"><a href="#" class="link">ABOUT</a></li>
+                <li id="nav-li"><a href="blog.html" class="link">BLOG</a></li>
+                <li id="nav-li">
+                  <img
+                    src="/img/cart-icon-black.svg"
+                    alt="Cart"
+                    class="icon"
+                    href="#"
+                  />
+                </li>
+              </ul>
             </nav>
-        </header>
+          </div>
+        </div>
+      </header>
 
-        <div class="main-wrapper">            
-            <div class="blog-arcticles">
-                <div class="blog-top-panel">
-                    <h2 class="title">Articles</h2> 
-                    <input class="blog-search" placeholder="Search">
-                </div>
-                <div class="blog-articles-block">
-                    <div class="blog-article-card">
-                        <img src="/img/blog-1.png">
-                        <div class="blog-subtitle">Multifamily Ground-Up Development Model</div>
-                        <p class="blog-text">The Development Models will appeal to developers both small and large. Meaning, a small 2-3 person shop to a private equity firm.</p>
-                    </div>
-                    <div class="blog-article-card">
-                        <img src="/img/blog-2.png">
-                        <div class="blog-subtitle">Multifamily Ground-Up Development Model</div>
-                        <p class="blog-text">The Development Models will appeal to developers both small and large. Meaning, a small 2-3 person shop to a private equity firm.</p>
-                    </div>
-                    <div class="blog-article-card">
-                            <img src="/img/blog-3.png">
-                            <div class="blog-subtitle">Multifamily Ground-Up Development Model</div>
-                            <p class="blog-text">The Development Models will appeal to developers both small and large. Meaning, a small 2-3 person shop to a private equity firm.</p>
-                    </div>
-                    <div class="blog-article-card">
-                            <img src="/img/blog-3.png">
-                            <div class="blog-subtitle">Multifamily Ground-Up Development Model</div>
-                            <p class="blog-text">The Development Models will appeal to developers both small and large. Meaning, a small 2-3 person shop to a private equity firm.</p>
-                    </div>
-                    <div class="blog-article-card">
-                            <img src="/img/blog-1.png">
-                            <div class="blog-subtitle">Multifamily Ground-Up Development Model</div>
-                            <p class="blog-text">The Development Models will appeal to developers both small and large. Meaning, a small 2-3 person shop to a private equity firm.</p>
-                    </div>
-                    <div class="blog-article-card">
-                            <img src="/img/blog-2.png">
-                            <div class="blog-subtitle">Multifamily Ground-Up Development Model</div>
-                            <p class="blog-text">The Development Models will appeal to developers both small and large. Meaning, a small 2-3 person shop to a private equity firm.</p>
-                    </div>
-                </div>
+      <div class="main-wrapper">
+        <section class="blog-arcticles">
+          <div class="container">
+            <div class="blog-top-panel">
+              <h2 class="title">Articles</h2>
+              <input class="blog-search" placeholder="Search" />
             </div>
+            <div class="blog-articles-block">
+              <div class="blog-article-card">
+                <img src="/img/blog-1.png" />
+                <div class="blog-card-text-wrapper">
+                  <div class="blog-subtitle">
+                    Multifamily Ground-Up Development Model
+                  </div>
+                  <p class="blog-text">
+                    The Development Models will appeal to developers both small
+                    and large. Meaning, a small 2-3 person shop to a private
+                    equity firm.
+                  </p>
+                </div>
+              </div>
+              <div class="blog-article-card">
+                <img src="/img/blog-2.png" />
+                <div class="blog-card-text-wrapper">
+                  <div class="blog-subtitle">
+                    Multifamily Ground-Up Development Model
+                  </div>
+                  <p class="blog-text">
+                    The Development Models will appeal to developers both small
+                    and large. Meaning, a small 2-3 person shop to a private
+                    equity firm.
+                  </p>
+                </div>
+              </div>
+              <div class="blog-article-card">
+                <img src="/img/blog-3.png" />
+                <div class="blog-card-text-wrapper">
+                  <div class="blog-subtitle">
+                    Multifamily Ground-Up Development Model
+                  </div>
+                  <p class="blog-text">
+                    The Development Models will appeal to developers both small
+                    and large. Meaning, a small 2-3 person shop to a private
+                    equity firm.
+                  </p>
+                </div>
+              </div>
+              <div class="blog-article-card">
+                <img src="/img/blog-3.png" />
+                <div class="blog-card-text-wrapper">
+                  <div class="blog-subtitle">
+                    Multifamily Ground-Up Development Model
+                  </div>
+                  <p class="blog-text">
+                    The Development Models will appeal to developers both small
+                    and large. Meaning, a small 2-3 person shop to a private
+                    equity firm.
+                  </p>
+                </div>
+              </div>
+              <div class="blog-article-card">
+                <img src="/img/blog-1.png" />
+                <div class="blog-card-text-wrapper">
+                  <div class="blog-subtitle">
+                    Multifamily Ground-Up Development Model
+                  </div>
+                  <p class="blog-text">
+                    The Development Models will appeal to developers both small
+                    and large. Meaning, a small 2-3 person shop to a private
+                    equity firm.
+                  </p>
+                </div>
+              </div>
+              <div class="blog-article-card">
+                <img src="/img/blog-2.png" />
+                <div class="blog-card-text-wrapper">
+                  <div class="blog-subtitle">
+                    Multifamily Ground-Up Development Model
+                  </div>
+                  <p class="blog-text">
+                    The Development Models will appeal to developers both small
+                    and large. Meaning, a small 2-3 person shop to a private
+                    equity firm.
+                  </p>
+                </div>
+              </div>
+            </div>
+          </div>
+        </section>
 
         <footer class="footer">
-            <a class="footer-logo" href="index.html">
+          <div class="container">
+            <div class="footer-content">
+              <a class="footer-logo" href="index.html">
                 <p class="footer-logo-icon"></p>
-                <p class="footer-logo-name" >PROJECT NAME</p>
-            </a>
-            <nav>
-                    <ul >
-                        <li><a href="#" class="link">MODELS</a></li>
-                        <li><a href="#" class="link">CONSULTING</a></li>
-                        <li><a href="#" class="link">ABOUT</a></li>
-                        <li><a href="#" class="link">BLOG</a></li>
-                        <li><a href="#" class="link">LEGAL</a></li>
-                    </ul>
-                    <ul>
-                        <li><img src="/img/place-icon.svg" alt="Cart" class="icon" href="#"><a class="link" href="#">P.O. Box XXXX, Fairfield, CT 06815</a></li>
-                        <li><img src="/img/phone-icon.svg" alt="Cart" class="icon" href="#"><a class="link" href="#">(203) xxx-5555</a></li>
-                    </ul>
-                </nav>
+                <p class="footer-logo-name">PROJECT NAME</p>
+              </a>
+              <nav>
+                <ul>
+                  <li><a href="#" class="link">MODELS</a></li>
+                  <li><a href="#" class="link">CONSULTING</a></li>
+                  <li><a href="#" class="link">ABOUT</a></li>
+                  <li><a href="#" class="link">BLOG</a></li>
+                  <li><a href="#" class="link">LEGAL</a></li>
+                </ul>
+                <ul>
+                  <li>
+                    <img
+                      src="/img/place-icon.svg"
+                      alt="Cart"
+                      class="icon"
+                      href="#"
+                    /><a class="link" href="#"
+                      >P.O. Box XXXX, Fairfield, CT 06815</a
+                    >
+                  </li>
+                  <li>
+                    <img
+                      src="/img/phone-icon.svg"
+                      alt="Cart"
+                      class="icon"
+                      href="#"
+                    /><a class="link" href="#">(203) xxx-5555</a>
+                  </li>
+                </ul>
+              </nav>
+            </div>
+          </div>
         </footer>
-              
+      </div>
     </div>
-
-</body>
-
+  </body>
 </html>
