Sfec-2. Add store and checkout pages.

--- a/cheсkout.html
+++ b/cheсkout.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta http-equiv="X-UA-Compatible" content="ie=edge" />
-    <title>Home page</title>
+    <title>Checkout</title>
     <link rel="stylesheet" href="/style.css" />
     <link
       rel="stylesheet"
@@ -51,91 +51,60 @@
         <section class="blog-arcticles">
           <div class="container">
             <div class="blog-top-panel">
-              <h2 class="title">Articles</h2>
-              <input class="blog-search" placeholder="Search" />
+              <h2 class="title">Checkout</h2>
             </div>
             <div class="blog-articles-block">
               <div class="blog-article-card">
-                <img src="/img/blog-1.png" />
-                <div class="blog-card-text-wrapper">
-                  <div class="blog-subtitle">
-                    Multifamily Ground-Up Development Model
-                  </div>
-                  <p class="blog-text">
-                    The Development Models will appeal to developers both small
-                    and large. Meaning, a small 2-3 person shop to a private
-                    equity firm.
-                  </p>
+                <a class="remove-button" href="#">remove</a>
+                <img class="item-image" src="/img/store-1.png" />
+                <p class="store-text">
+                  Asus ZenFone Go ZB45
+                </p>
+                <div class="store-line"></div>
+                <div class="store-subtitle">
+                  $ 384.4
                 </div>
               </div>
               <div class="blog-article-card">
-                <img src="/img/blog-2.png" />
-                <div class="blog-card-text-wrapper">
-                  <div class="blog-subtitle">
-                    Multifamily Ground-Up Development Model
-                  </div>
-                  <p class="blog-text">
-                    The Development Models will appeal to developers both small
-                    and large. Meaning, a small 2-3 person shop to a private
-                    equity firm.
-                  </p>
+                <a class="remove-button" href="#">remove</a>
+                <img class="item-image" src="/img/store-2.png" />
+                <p class="store-text">
+                  Xiaomi Mi Band 2
+                </p>
+                <div class="store-line"></div>
+                <div class="store-subtitle">
+                  $ 384.4
                 </div>
               </div>
               <div class="blog-article-card">
-                <img src="/img/blog-3.png" />
-                <div class="blog-card-text-wrapper">
-                  <div class="blog-subtitle">
-                    Multifamily Ground-Up Development Model
-                  </div>
-                  <p class="blog-text">
-                    The Development Models will appeal to developers both small
-                    and large. Meaning, a small 2-3 person shop to a private
-                    equity firm.
-                  </p>
+                <a class="remove-button" href="#">remove</a>
+                <img class="item-image" src="/img/store-3.png" />
+                <p class="store-text">
+                  LG 43UH610V
+                </p>
+                <div class="store-line"></div>
+                <div class="store-subtitle">
+                  $ 384.4
                 </div>
               </div>
               <div class="blog-article-card">
-                <img src="/img/blog-3.png" />
-                <div class="blog-card-text-wrapper">
-                  <div class="blog-subtitle">
-                    Multifamily Ground-Up Development Model
-                  </div>
-                  <p class="blog-text">
-                    The Development Models will appeal to developers both small
-                    and large. Meaning, a small 2-3 person shop to a private
-                    equity firm.
-                  </p>
-                </div>
-              </div>
-              <div class="blog-article-card">
-                <img src="/img/blog-1.png" />
-                <div class="blog-card-text-wrapper">
-                  <div class="blog-subtitle">
-                    Multifamily Ground-Up Development Model
-                  </div>
-                  <p class="blog-text">
-                    The Development Models will appeal to developers both small
-                    and large. Meaning, a small 2-3 person shop to a private
-                    equity firm.
-                  </p>
-                </div>
-              </div>
-              <div class="blog-article-card">
-                <img src="/img/blog-2.png" />
-                <div class="blog-card-text-wrapper">
-                  <div class="blog-subtitle">
-                    Multifamily Ground-Up Development Model
-                  </div>
-                  <p class="blog-text">
-                    The Development Models will appeal to developers both small
-                    and large. Meaning, a small 2-3 person shop to a private
-                    equity firm.
-                  </p>
+                <a class="remove-button" href="#">remove</a>
+                <img class="item-image" src="/img/store-4.png" />
+                <p class="store-text">
+                  Electrolux EZB 52410 AK
+                </p>
+                <div class="store-line"></div>
+                <div class="store-subtitle">
+                  $ 384.4
                 </div>
               </div>
             </div>
           </div>
         </section>
+
+        <div class="pay">
+          <a class="pay-button" href="#">pay now</a>
+        </div>
 
         <footer class="footer">
           <div class="container">
