--- a/index.html
+++ b/index.html
@@ -18,12 +18,12 @@
         </a>
         <nav>
           <ul>
-            <li><a href="#" class="link">MODELS</a></li>
+            <li><a href="/store.html" class="link">MODELS</a></li>
             <li><a href="#" class="link">CONSULTING</a></li>
             <li><a href="#" class="link">ABOUT</a></li>
             <li><a href="/blog.html" class="link">BLOG</a></li>
             <li>
-              <img src="/img/cart-icon.svg" alt="Cart" class="icon" href="#" />
+              <i class="fas fa-shopping-cart fa-2x" id="home-cart"></i>
             </li>
           </ul>
         </nav>
@@ -211,37 +211,43 @@
       </div>
 
       <footer class="footer">
-        <a class="footer-logo" href="index.html">
-          <p class="footer-logo-icon"></p>
-          <p class="footer-logo-name">PROJECT NAME</p>
-        </a>
-        <nav>
-          <ul>
-            <li><a href="#" class="link">MODELS</a></li>
-            <li><a href="#" class="link">CONSULTING</a></li>
-            <li><a href="#" class="link">ABOUT</a></li>
-            <li><a href="#" class="link">BLOG</a></li>
-            <li><a href="#" class="link">LEGAL</a></li>
-          </ul>
-          <ul>
-            <li>
-              <img
-                src="/img/place-icon.svg"
-                alt="Cart"
-                class="icon"
-                href="#"
-              /><a class="link" href="#">P.O. Box XXXX, Fairfield, CT 06815</a>
-            </li>
-            <li>
-              <img
-                src="/img/phone-icon.svg"
-                alt="Cart"
-                class="icon"
-                href="#"
-              /><a class="link" href="#">(203) xxx-5555</a>
-            </li>
-          </ul>
-        </nav>
+        <div class="container">
+          <div class="footer-content">
+            <a class="footer-logo" href="index.html">
+              <p class="footer-logo-icon"></p>
+              <p class="footer-logo-name">PROJECT NAME</p>
+            </a>
+            <nav>
+              <ul>
+                <li><a href="#" class="link">MODELS</a></li>
+                <li><a href="#" class="link">CONSULTING</a></li>
+                <li><a href="#" class="link">ABOUT</a></li>
+                <li><a href="#" class="link">BLOG</a></li>
+                <li><a href="#" class="link">LEGAL</a></li>
+              </ul>
+              <ul>
+                <li>
+                  <img
+                    src="/img/place-icon.svg"
+                    alt="Cart"
+                    class="icon"
+                    href="#"
+                  /><a class="link" href="#"
+                    >P.O. Box XXXX, Fairfield, CT 06815</a
+                  >
+                </li>
+                <li>
+                  <img
+                    src="/img/phone-icon.svg"
+                    alt="Cart"
+                    class="icon"
+                    href="#"
+                  /><a class="link" href="#">(203) xxx-5555</a>
+                </li>
+              </ul>
+            </nav>
+          </div>
+        </div>
       </footer>
     </div>
   </body>
