--- a/store.html
+++ b/store.html
@@ -24,7 +24,12 @@
               <span class="logo-icon"></span>
               project name
             </a>
-            <i class="fas fa-shopping-cart fa-2x" id="mobile-cart"></i>
+            <a href="cheсkout.html" id="mobile-cart"
+              ><i class="fa" style="font-size:24px">&#xf07a;</i>
+              <span class="badge badge-warning" id="lblCartCount">
+                2
+              </span></a
+            >
             <nav id="js-menu">
               <ul>
                 <li id="nav-li">
@@ -51,86 +56,92 @@
         <section class="blog-arcticles">
           <div class="container">
             <div class="blog-top-panel">
-              <h2 class="title">Articles</h2>
+              <h2 class="title">Store</h2>
               <input class="blog-search" placeholder="Search" />
             </div>
             <div class="blog-articles-block">
               <div class="blog-article-card">
-                <img src="/img/blog-1.png" />
-                <div class="blog-card-text-wrapper">
-                  <div class="blog-subtitle">
-                    Multifamily Ground-Up Development Model
-                  </div>
-                  <p class="blog-text">
-                    The Development Models will appeal to developers both small
-                    and large. Meaning, a small 2-3 person shop to a private
-                    equity firm.
-                  </p>
+                <div class="store-subtitle">
+                  Recommend
+                </div>
+                <div class="store-line"></div>
+                <img class="item-image" src="/img/store-1.png" />
+                <p class="store-text">
+                  Asus ZenFone Go ZB45
+                </p>
+                <div class="store-line"></div>
+                <div class="store-subtitle">
+                  $ 384.4
                 </div>
               </div>
               <div class="blog-article-card">
-                <img src="/img/blog-2.png" />
-                <div class="blog-card-text-wrapper">
-                  <div class="blog-subtitle">
-                    Multifamily Ground-Up Development Model
-                  </div>
-                  <p class="blog-text">
-                    The Development Models will appeal to developers both small
-                    and large. Meaning, a small 2-3 person shop to a private
-                    equity firm.
-                  </p>
+                <div class="store-subtitle">
+                  Bestseller
+                </div>
+                <div class="store-line"></div>
+                <img class="item-image" src="/img/store-2.png" />
+                <p class="store-text">
+                  Xiaomi Mi Band 2
+                </p>
+                <div class="store-line"></div>
+                <div class="store-subtitle">
+                  $ 384.4
                 </div>
               </div>
               <div class="blog-article-card">
-                <img src="/img/blog-3.png" />
-                <div class="blog-card-text-wrapper">
-                  <div class="blog-subtitle">
-                    Multifamily Ground-Up Development Model
-                  </div>
-                  <p class="blog-text">
-                    The Development Models will appeal to developers both small
-                    and large. Meaning, a small 2-3 person shop to a private
-                    equity firm.
-                  </p>
+                <div class="store-subtitle">
+                  Goods of the week
+                </div>
+                <div class="store-line"></div>
+                <img class="item-image" src="/img/store-3.png" />
+                <p class="store-text">
+                  LG 43UH610V
+                </p>
+                <div class="store-line"></div>
+                <div class="store-subtitle">
+                  $ 384.4
                 </div>
               </div>
               <div class="blog-article-card">
-                <img src="/img/blog-3.png" />
-                <div class="blog-card-text-wrapper">
-                  <div class="blog-subtitle">
-                    Multifamily Ground-Up Development Model
-                  </div>
-                  <p class="blog-text">
-                    The Development Models will appeal to developers both small
-                    and large. Meaning, a small 2-3 person shop to a private
-                    equity firm.
-                  </p>
+                <div class="store-subtitle">
+                  Recommend
+                </div>
+                <div class="store-line"></div>
+                <img class="item-image" src="/img/store-4.png" />
+                <p class="store-text">
+                  Electrolux EZB 52410 AK
+                </p>
+                <div class="store-line"></div>
+                <div class="store-subtitle">
+                  $ 384.4
                 </div>
               </div>
               <div class="blog-article-card">
-                <img src="/img/blog-1.png" />
-                <div class="blog-card-text-wrapper">
-                  <div class="blog-subtitle">
-                    Multifamily Ground-Up Development Model
-                  </div>
-                  <p class="blog-text">
-                    The Development Models will appeal to developers both small
-                    and large. Meaning, a small 2-3 person shop to a private
-                    equity firm.
-                  </p>
+                <div class="store-subtitle">
+                  Bestseller
+                </div>
+                <div class="store-line"></div>
+                <img class="item-image" src="/img/store-5.png" />
+                <p class="store-text">
+                  Beats studio wireless
+                </p>
+                <div class="store-line"></div>
+                <div class="store-subtitle">
+                  $ 384.4
                 </div>
               </div>
               <div class="blog-article-card">
-                <img src="/img/blog-2.png" />
-                <div class="blog-card-text-wrapper">
-                  <div class="blog-subtitle">
-                    Multifamily Ground-Up Development Model
-                  </div>
-                  <p class="blog-text">
-                    The Development Models will appeal to developers both small
-                    and large. Meaning, a small 2-3 person shop to a private
-                    equity firm.
-                  </p>
+                <div class="store-subtitle">
+                  Recommend
+                </div>
+                <div class="store-line"></div>
+                <img class="item-image" src="/img/store-6.png" />
+                <p class="store-text">
+                  Nikon D3300 Kit
+                </p>
+                <div class="store-line"></div>
+                <div class="store-subtitle">
+                  $ 384.4
                 </div>
               </div>
             </div>
