Add store items loading from json, search, loader

--- a/blog.html
+++ b/blog.html
@@ -56,82 +56,94 @@
             </div>
             <div class="blog-articles-block">
               <div class="blog-article-card">
-                <img src="/img/blog-1.png" />
-                <div class="blog-card-text-wrapper">
-                  <div class="blog-subtitle">
-                    Multifamily Ground-Up Development Model
+                <a href="#">
+                  <img class="blog-arcticle-image" src="/img/blog-1.png" />
+                  <div class="blog-card-text-wrapper">
+                    <div class="blog-subtitle">
+                      Multifamily Ground-Up Development Model
+                    </div>
+                    <p class="blog-text">
+                      The Development Models will appeal to developers both
+                      small and large. Meaning, a small 2-3 person shop to a
+                      private equity firm.
+                    </p>
                   </div>
-                  <p class="blog-text">
-                    The Development Models will appeal to developers both small
-                    and large. Meaning, a small 2-3 person shop to a private
-                    equity firm.
-                  </p>
-                </div>
+                </a>
               </div>
               <div class="blog-article-card">
-                <img src="/img/blog-2.png" />
-                <div class="blog-card-text-wrapper">
-                  <div class="blog-subtitle">
-                    Multifamily Ground-Up Development Model
+                <a href="#">
+                  <img class="blog-arcticle-image" src="/img/blog-2.png" />
+                  <div class="blog-card-text-wrapper">
+                    <div class="blog-subtitle">
+                      Multifamily Ground-Up Development Model
+                    </div>
+                    <p class="blog-text">
+                      The Development Models will appeal to developers both
+                      small and large. Meaning, a small 2-3 person shop to a
+                      private equity firm.
+                    </p>
                   </div>
-                  <p class="blog-text">
-                    The Development Models will appeal to developers both small
-                    and large. Meaning, a small 2-3 person shop to a private
-                    equity firm.
-                  </p>
-                </div>
+                </a>
               </div>
               <div class="blog-article-card">
-                <img src="/img/blog-3.png" />
-                <div class="blog-card-text-wrapper">
-                  <div class="blog-subtitle">
-                    Multifamily Ground-Up Development Model
+                <a href="#">
+                  <img class="blog-arcticle-image" src="/img/blog-3.png" />
+                  <div class="blog-card-text-wrapper">
+                    <div class="blog-subtitle">
+                      Multifamily Ground-Up Development Model
+                    </div>
+                    <p class="blog-text">
+                      The Development Models will appeal to developers both
+                      small and large. Meaning, a small 2-3 person shop to a
+                      private equity firm.
+                    </p>
                   </div>
-                  <p class="blog-text">
-                    The Development Models will appeal to developers both small
-                    and large. Meaning, a small 2-3 person shop to a private
-                    equity firm.
-                  </p>
-                </div>
+                </a>
               </div>
               <div class="blog-article-card">
-                <img src="/img/blog-3.png" />
-                <div class="blog-card-text-wrapper">
-                  <div class="blog-subtitle">
-                    Multifamily Ground-Up Development Model
+                <a href="#">
+                  <img class="blog-arcticle-image" src="/img/blog-3.png" />
+                  <div class="blog-card-text-wrapper">
+                    <div class="blog-subtitle">
+                      Multifamily Ground-Up Development Model
+                    </div>
+                    <p class="blog-text">
+                      The Development Models will appeal to developers both
+                      small and large. Meaning, a small 2-3 person shop to a
+                      private equity firm.
+                    </p>
                   </div>
-                  <p class="blog-text">
-                    The Development Models will appeal to developers both small
-                    and large. Meaning, a small 2-3 person shop to a private
-                    equity firm.
-                  </p>
-                </div>
+                </a>
               </div>
               <div class="blog-article-card">
-                <img src="/img/blog-1.png" />
-                <div class="blog-card-text-wrapper">
-                  <div class="blog-subtitle">
-                    Multifamily Ground-Up Development Model
+                <a href="#">
+                  <img class="blog-arcticle-image" src="/img/blog-1.png" />
+                  <div class="blog-card-text-wrapper">
+                    <div class="blog-subtitle">
+                      Multifamily Ground-Up Development Model
+                    </div>
+                    <p class="blog-text">
+                      The Development Models will appeal to developers both
+                      small and large. Meaning, a small 2-3 person shop to a
+                      private equity firm.
+                    </p>
                   </div>
-                  <p class="blog-text">
-                    The Development Models will appeal to developers both small
-                    and large. Meaning, a small 2-3 person shop to a private
-                    equity firm.
-                  </p>
-                </div>
+                </a>
               </div>
               <div class="blog-article-card">
-                <img src="/img/blog-2.png" />
-                <div class="blog-card-text-wrapper">
-                  <div class="blog-subtitle">
-                    Multifamily Ground-Up Development Model
+                <a href="#">
+                  <img class="blog-arcticle-image" src="/img/blog-2.png" />
+                  <div class="blog-card-text-wrapper">
+                    <div class="blog-subtitle">
+                      Multifamily Ground-Up Development Model
+                    </div>
+                    <p class="blog-text">
+                      The Development Models will appeal to developers both
+                      small and large. Meaning, a small 2-3 person shop to a
+                      private equity firm.
+                    </p>
                   </div>
-                  <p class="blog-text">
-                    The Development Models will appeal to developers both small
-                    and large. Meaning, a small 2-3 person shop to a private
-                    equity firm.
-                  </p>
-                </div>
+                </a>
               </div>
             </div>
           </div>
