--- a/cheсkout.html
+++ b/cheсkout.html
@@ -56,44 +56,40 @@
             <div class="blog-articles-block">
               <div class="blog-article-card">
                 <a class="remove-button" href="#">remove</a>
-                <img class="item-image" src="/img/store-1.png" />
+                <img class="checkout-image" src="/img/store-1.png" />
                 <p class="store-text">
                   Asus ZenFone Go ZB45
                 </p>
-                <div class="store-line"></div>
                 <div class="store-subtitle">
                   $ 384.4
                 </div>
               </div>
               <div class="blog-article-card">
                 <a class="remove-button" href="#">remove</a>
-                <img class="item-image" src="/img/store-2.png" />
+                <img class="checkout-image" src="/img/store-2.png" />
                 <p class="store-text">
                   Xiaomi Mi Band 2
                 </p>
-                <div class="store-line"></div>
                 <div class="store-subtitle">
                   $ 384.4
                 </div>
               </div>
               <div class="blog-article-card">
                 <a class="remove-button" href="#">remove</a>
-                <img class="item-image" src="/img/store-3.png" />
+                <img class="checkout-image" src="/img/store-3.png" />
                 <p class="store-text">
                   LG 43UH610V
                 </p>
-                <div class="store-line"></div>
                 <div class="store-subtitle">
                   $ 384.4
                 </div>
               </div>
               <div class="blog-article-card">
                 <a class="remove-button" href="#">remove</a>
-                <img class="item-image" src="/img/store-4.png" />
+                <img class="checkout-image" src="/img/store-4.png" />
                 <p class="store-text">
                   Electrolux EZB 52410 AK
                 </p>
-                <div class="store-line"></div>
                 <div class="store-subtitle">
                   $ 384.4
                 </div>
