--- a/store.html
+++ b/store.html
@@ -12,6 +12,8 @@
     />
   </head>
   <script type="text/javascript" src="/bundle.js"></script>
+  <script src="//ajax.googleapis.com/ajax/libs/jquery/1.9.1/jquery.min.js"></script>
+
   <body class="blog">
     <div class="page-wrapper">
       <header class="white-header" id="header-js">
@@ -53,98 +55,21 @@
       </header>
 
       <div class="main-wrapper">
+        <div id="loading">
+          <img id="loading-image" src="img/ajax-loader.gif" alt="Loading..." />
+        </div>
         <section class="blog-arcticles">
           <div class="container">
             <div class="blog-top-panel">
               <h2 class="title">Store</h2>
-              <input class="blog-search" placeholder="Search" />
+              <input
+                class="blog-search"
+                id="myInput"
+                onkeyup="storeSearch()"
+                placeholder="Search"
+              />
             </div>
-            <div class="blog-articles-block">
-              <div class="blog-article-card">
-                <div class="store-subtitle">
-                  Recommend
-                </div>
-                <div class="store-line"></div>
-                <img class="item-image" src="/img/store-1.png" />
-                <p class="store-text">
-                  Asus ZenFone Go ZB45
-                </p>
-                <div class="store-line"></div>
-                <div class="store-subtitle">
-                  $ 384.4
-                </div>
-              </div>
-              <div class="blog-article-card">
-                <div class="store-subtitle">
-                  Bestseller
-                </div>
-                <div class="store-line"></div>
-                <img class="item-image" src="/img/store-2.png" />
-                <p class="store-text">
-                  Xiaomi Mi Band 2
-                </p>
-                <div class="store-line"></div>
-                <div class="store-subtitle">
-                  $ 384.4
-                </div>
-              </div>
-              <div class="blog-article-card">
-                <div class="store-subtitle">
-                  Goods of the week
-                </div>
-                <div class="store-line"></div>
-                <img class="item-image" src="/img/store-3.png" />
-                <p class="store-text">
-                  LG 43UH610V
-                </p>
-                <div class="store-line"></div>
-                <div class="store-subtitle">
-                  $ 384.4
-                </div>
-              </div>
-              <div class="blog-article-card">
-                <div class="store-subtitle">
-                  Recommend
-                </div>
-                <div class="store-line"></div>
-                <img class="item-image" src="/img/store-4.png" />
-                <p class="store-text">
-                  Electrolux EZB 52410 AK
-                </p>
-                <div class="store-line"></div>
-                <div class="store-subtitle">
-                  $ 384.4
-                </div>
-              </div>
-              <div class="blog-article-card">
-                <div class="store-subtitle">
-                  Bestseller
-                </div>
-                <div class="store-line"></div>
-                <img class="item-image" src="/img/store-5.png" />
-                <p class="store-text">
-                  Beats studio wireless
-                </p>
-                <div class="store-line"></div>
-                <div class="store-subtitle">
-                  $ 384.4
-                </div>
-              </div>
-              <div class="blog-article-card">
-                <div class="store-subtitle">
-                  Recommend
-                </div>
-                <div class="store-line"></div>
-                <img class="item-image" src="/img/store-6.png" />
-                <p class="store-text">
-                  Nikon D3300 Kit
-                </p>
-                <div class="store-line"></div>
-                <div class="store-subtitle">
-                  $ 384.4
-                </div>
-              </div>
-            </div>
+            <div class="blog-articles-block" id="store-items"></div>
           </div>
         </section>
 
@@ -190,4 +115,61 @@
       </div>
     </div>
   </body>
+
+  <script id="template-list-item" type="text/template">
+    <div class="blog-article-card">
+        <a href="#" onclick="getCardInfo(this)">
+          <div class="store-subtitle" id="subtitle">
+              {{subtitle}}
+          </div>
+          <img class="item-image" src="{{image}}" />
+          <p class="store-text">
+              {{name}}
+          </p>
+          <div class="store-subtitle" id="price">
+            $ {{price}}
+          </div>
+        </a>
+      </div>
+  </script>
+
+  <script>
+    function storeSearch() {
+      var input, filter, itemsBlock, item, name, i;
+      input = document.getElementById('myInput');
+      filter = input.value.toUpperCase();
+      itemsBlock = document.getElementById('store-items');
+      item = itemsBlock.getElementsByClassName('blog-article-card');
+
+      for (i = 0; i < item.length; i++) {
+        name = item[i].getElementsByTagName('p')[0];
+        if (name.innerHTML.toUpperCase().indexOf(filter) > -1) {
+          item[i].style.display = '';
+        } else {
+          item[i].style.display = 'none';
+        }
+      }
+    }
+
+    function getCardInfo(name) {
+      itemSubtitle = name.querySelector('#subtitle').innerHTML;
+      itemName = name.querySelector('.store-text').innerHTML;
+      itemPrice = name.querySelector('#price').innerHTML;
+      console.log(
+        'Category: ' +
+          itemSubtitle +
+          '\n' +
+          'Item name: ' +
+          itemName +
+          '\n' +
+          'Item price:' +
+          itemPrice,
+      );
+    }
+  </script>
+  <script language="javascript" type="text/javascript">
+    $(window).load(function() {
+      $('#loading').hide();
+    });
+  </script>
 </html>
